tier-1-vpx-cic.yaml
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #
#                          Pre-requisites:                            #
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #
# Fill this value with the VIP of the Tier-1 VPX/CPX
# value: "<VIP of the Tier-1 VPX>"
#
# Fill this value with the NetScaler IP of the Tier-1 VPX/MPX
# value: "<NSIP of the Tier-1 VPX>"
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - #

---
apiVersion: v1
kind: Pod
metadata:
  name: cic-k8s-ingress-controller
  labels:
    app: cic-k8s-ingress-controller
spec:
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.4.392"
        args:
          - --ingress-classes
            tier-1-vpx
          - --feature-node-watch
            true
        imagePullPolicy: Always
---
