sftp.yaml
kind: Service
apiVersion: v1
metadata:
  name: sftp
  namespace: sftp
spec:
  clusterIP: None
  ports:
  - name: "ssh"
    port: 22
    targetPort: 22
  selector:
    app: sftp

---

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: sftp
  namespace: sftp
  labels:
    app: sftp
spec:
  # how many pods and indicate which strategy we want for rolling update
  replicas: 3
  minReadySeconds: 10
  template:
    metadata:
      labels:
        environment: production
        app: sftp
      annotations:
        container.apparmor.security.beta.kubernetes.io/sftp: runtime/default
    spec:
      #secrets and config
      volumes:
      - name: sftp-public-keys
        configMap:
          name: sftp-public-keys
      containers:
        #the sftp server itself
        - name: sftp
          image: atmoz/sftp:latest
          imagePullPolicy: Always
          args: ["Rob:Citrix123:1001:100:incoming,outgoing", "Dave:Citrix123:1002:100:coming,going"] #create users and dirs
          ports:
            - containerPort: 22
          volumeMounts:
            - mountPath: /home/Rob/.ssh/keys
              name: sftp-public-keys
              readOnly: true
            - mountPath: /home/Dave/.ssh/keys
              name: sftp-public-keys
              readOnly: true
          securityContext:
            capabilities:
              add: ["SYS_ADMIN"]
          resources: {}
