tier-2-cpx.yaml
#Deploy a standalone CPX as an ingress device
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cpx-ingress
spec:
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations:
    spec:
      serviceAccountName: cpx
      containers:
        - name: cpx-ingress
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-36.29"
          securityContext:
             privileged: true
          ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
          - name: nitro-http
            containerPort: 9080
          - name: nitro-https
            containerPort: 9443
          #This is required for Health check to succeed
          readinessProbe:
            tcpSocket:
              port: 9080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.5.25"
          args:
            - --ingress-classes
              sftp-cpx
          imagePullPolicy: Always

---
#Expose the CPX as a service
kind: Service
apiVersion: v1
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
spec:
  type: NodePort
  selector:
    app: cpx-ingress
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
